--- a/a3 qh.tex
+++ b/a3 qh.tex
@@ -22,9 +22,9 @@ Since we use simple uniform hashing, the average number of elements that hash to
 \paragraph{(a).} Given that we use sorted arrays as the chaining components for the hash table:\\ On average, the time complexity for search would be \(O(1+\log(\alpha))\),  Here, \(O(1)\) is the time taken to compute \(h(k)\), and \(O(\log(\alpha))\) is the time to search for the key inside the array at slot \(h(k)\). We achieve logarithmic runtime as we could perform binary search on the sorted array, since arrays allow random access. However, if \(\alpha\) is very small, we would not have much benefit from the usual way of using linked list as the chaining component (runtime being \(O(1+\alpha)\)). But in the case that \(n \gg m\), then the runtime would improve.
 
 \paragraph{(b).} Given that we need to run a merge sort every time we insert an element:\\
-On average, the time complexity for insertion would be \(O(1+\alpha\log(\alpha))\), where \(O(1)\) is the time to compute \(h(k)\), and \(O(\alpha\log(\alpha))\) is the time to perform the merge sort on the array at slot \(h(k)\). If we do not keep track of the current number of elements in the array, then we also have an additional cost of \(O(\alpha)\) to search to the end for an empty spot, otherwise it would just take \(O(1)\) time to append. Yet in the end, the insertion time would be worse than the original scheme of using linked lists, with which it only costs \(O(1)\) time to prepend the key.
+On average, the time complexity for insertion would be \(O(1+\alpha\log(\alpha))\), where \(O(1)\) is the time to compute \(h(k)\), and \(O(\alpha\log(\alpha))\) is the time to perform the merge sort on the array at slot \(h(k)\). If we do not keep track of the current number of elements in the array, then we also have an additional cost of \(O(\alpha)\) to search to the end for an empty spot, otherwise it would just take \(O(1)\) time to append. Or if we consider the cost to expand the array size, then we need \(O(\alpha)\) to copy the old array into the new one. Yet in the end, the insertion time would be worse than the original scheme of using linked lists, which only costs \(O(1)\) time to prepend the key.
 
-\paragraph{(c).} Deletion with sorted arrays would remain the same as using linked lists, i.e. \(O(1 +\alpha)\). \(O(1)\) is the time to compute \(h(k)\), and \(O(\alpha)\) is the total cost for deletion. To delete, we first need to search for the key, so it takes \(O(\log(\alpha))\) to perform binary search, then remove the key by shifting all elements greater than the deleted key one slot to the left. In the worst case, the deleted key is the first element, so we need to shift all the remaining elements, which is \(O(\alpha)\). Since \(O(\log(\alpha)) \in O(\alpha)\), we have the overall cost for search-delete-shift as \(O(\alpha)\). With linked lists, deletion is also \(O(\alpha)\). We need to traverse the list to search for the previous element of the target, then change its pointer to the next (\(O(1)\)), and free memory for the target(\(O(1)\)). In the worst case, the target is the last element, so we require \(O(\alpha)\).
+\paragraph{(c).} Deletion with sorted arrays would remain the same as using linked lists, i.e. \(O(1 +\alpha)\). \(O(1)\) is the time to compute \(h(k)\), and \(O(\alpha)\) is the total cost for deletion. To delete, we first need to search for the key, so it takes \(O(\log(\alpha))\) to perform binary search, then remove the key by shifting all elements greater than the deleted key one slot to the left. In the worst case, the deleted key is the first element, so we need to shift all the remaining elements, which is \(O(\alpha)\). Since \(O(\log(\alpha)) \in O(\alpha)\), we have the overall cost for search-delete-shift as \(O(\alpha)\). With linked lists, deletion is also \(O(\alpha)\). We need to traverse the list to search for the previous element of the target, then change its pointer to the next element of the target (\(O(1)\)), and free memory for the target(\(O(1)\)). In the worst case, the target is the last element, so we require \(O(\alpha)\).
 
 \subsection*{Q2.}
 His claim is not correct for all situations. There is no guarantee that the leaves of a complete binary tree are on the same level. There could be missing right-most nodes on the last level. As illustrated in Figure 1, all internal nodes of a complete binary tree have two children, but the leaves here are not on the same level, meaning that if we color all nodes as black, the number of black nodes from root to a leaf is not the same for all paths. This violates the red black tree property:
@@ -52,12 +52,12 @@ An avl tree is a self balancing binary search tree that has the property that, f
 
 \subsection*{Q4.}
 \paragraph{(a).} Yes, we can solve it by dynamic programming.\\ 
-Since the flat fee \(C\) remains constant for any sequence, we can just focus on the cost sum of flights in the sequence. In addition, since we need to find the cheapest sequence from any city-\(i\) to city-\(n\), the problem can be generalized to an all pairs shortest paths problem. We have to find cheapest sequence for all pairs, despite that the problem only asks for \((i,n)\). This is because the subsequence of a cheapest sequence is also a cheapest sequence by itself. We need to construct a cheapest-sequence tree (similar to shortest-path tree) for the ease of restoring sequences at the end. This algorithm will only need to be run quarterly when the prices of direct flights changed. After that, we can simply answer customers' queries by looking up the cheapest-sequence tree. The underlying algorithm is Floyd-Warshall algorithm.
+Since the flat fee \(C\) remains constant for any sequence, we can just focus on the cost sum of flights in the sequence. In addition, since we need to find the cheapest sequence from any city-\(i\) to city-\(n\), the problem can be generalized to an all pairs shortest paths problem. We have to find cheapest sequence for all pairs, despite that the problem only asks for \((i,n)\). This is because the subsequence of a cheapest sequence is also a cheapest sequence by itself. We need to construct a cheapest-sequence tree (similar to shortest-path tree) for the ease of restoring sequences at the end. This algorithm will only need to be run quarterly when the prices of direct flights change. After that, we can simply answer customers' queries by looking up the cheapest-sequence tree. The underlying algorithm is Floyd-Warshall algorithm.
 
 \pagebreak
 \noindent\textbf{Sub-problems:} cheapest sequence to travel from city-\(i\) to city-\(j\) where \(i,j \in [1,n]\) using intermediate cities from the set \(\{1, \hdots, k\}\), and its length.\\
 \textbf{Relation between sub-problems:}\\
- To build the cheapest sequence from city-\(i\) to city-\(j\) when the intermediate cities are taken from the set \(\{1, \hdots, k\}\), we notice that the sequence can either go through city-\(k\), or it does not. If it does, then the subsequences from city-\(i\) to city-\(k\), and from city-\(k\) to city-\(j\) would have intermediate cities taken from the set \(\{1, \hdots, k-1\}\). If it does not, then the sequence itself would have intermediate cities from \(\{1, \hdots, k-1\}\). Written as formulas,
+ To build the cheapest sequence from city-\(i\) to city-\(j\) when the intermediate cities are taken from the set \(\{1, \hdots, k\}\), we notice that the sequence can either go through city-\(k\), or not. If it does, then the subsequences from city-\(i\) to city-\(k\), and from city-\(k\) to city-\(j\) would have intermediate cities taken from the set \(\{1, \hdots, k-1\}\). If it does not, then the sequence itself would have intermediate cities from \(\{1, \hdots, k-1\}\). Written as formulas,
 \begin{itemize}
      \item On minimum cost:
      \begin{equation*}
@@ -93,7 +93,7 @@ Since the flat fee \(C\) remains constant for any sequence, we can just focus on
                     \State \(O[i][j] = \text{Nil}\)
                \EndFor
           \EndFor
-          \For {each edge \((i,j) \in G.E\)}
+          \For {each directed edge \((i,j) \in G.E\)}
                \State \(C[i][j] = P(i,j)\)
                \State \(O[i][j] = j\)
           \EndFor
@@ -132,31 +132,31 @@ Since the flat fee \(C\) remains constant for any sequence, we can just focus on
 \end{algorithm}
 
 \paragraph{(c).}
-Time complexity is \(O(n^3)\). The Floyd-Warshall algorithm has 3 \textbf{for} loops on line\(13\)-\(18\). The outermost \textbf{for} loop iterates on \(k\) which gradually builds cheapest sequences based on the set of intermediate cities \{\(1..k\)\} until \(k = n\). The two inner \textbf{for} loops iterates over all pairs of cities to build sequences for them. The initialization on line\(3\)-\(6\) is \(O(n^2)\). The time to initialize the costs and successor cities for \(k=0\) on line\(7\)-\(12\) is \(O(n^2)\). This is because in the worst case, cities are fully connected, and the number of edges is \(n \times (n-1) = O(n^2)\). This algorithm is only required to run once per quarter when the price of direct flights changes. To reconstruct the sequence by looking up the table, we only need \(O(n)\) time since there can at most be \(n\) cities in a cheapest sequence (no repeated cities, i.e. no cycles). Hence, at other times when prices do not change, we only need \(O(n)\) time to find the cheapest sequence. Otherwise, we need to both reconstruct the table and find the sequence, which is in total \(O(n^3)\) time.
+Time complexity is \(O(n^3)\). The Floyd-Warshall algorithm has 3 \textbf{for} loops on line\(13\)-\(18\). The outermost \textbf{for} loop iterates on \(k\) which gradually builds cheapest sequences based on the set of intermediate cities \{\(1..k\)\} until \(k = n\). The two inner \textbf{for} loops iterates over all pairs of cities to build sequences for them. The initialization on line\(3\)-\(6\) is \(O(n^2)\). The time to initialize the costs and successor cities for \(k=0\) on line\(7\)-\(12\) is \(O(n^2)\). This is because in the worst case, cities are fully connected, and the number of directed edges is \(n \times (n-1) = O(n^2)\). This algorithm is only required to run once per quarter when the price of direct flights changes. To reconstruct the sequence by looking up the table, we only need \(O(n)\) time since there can at most be \(n\) cities in a cheapest sequence (no repeated cities, i.e. no cycles). Hence, at other times when prices do not change, we only need \(O(n)\) time to find the cheapest sequence. Otherwise, we need to both reconstruct the table and find the sequence, which is in total \(O(n^3)\) time.
 
 \subsection*{Q5.}
 \paragraph{(a).}
 First, we simplify the problem into a longest decreasing subsequence (LDS) problem by sorting. We sort based on the first parameter, i.e. radius, in the descending order. This ensures that we could choose a longest decreasing sequence out of the original unsorted \(n\) boxes, by simply finding the LDS of the sorted list. Note that here we cannot solve the LDS based on height purely, since in the case where radius are the same and height are in the descending order, we might mistakenly contribute boxes of the same radius to the LDS. We could avoid this by also sorting the height in the ascending order for the boxes of the same radius, and then find the LDS based on height only.
 Now we can find the LDS of the sorted sequence by dynamic programming. \\
 \textbf{Sub-problems:}\\
-We use a modified sub-problem \cite{OMS}  to solve the LDS in \(O(n\log n)\) time. The sub-problems are decreasing subsequence of varying lengths starting from \(1\). We build longer subsequence based on the end element of the current subsequences. For subsequences of the same lengths, we store the end element that is known to be the largest at the current point of time. This ensures that we could build the subsequence the longest possible. The LDS is the longest subsequence found at the end.\\
+We use a modified sub-problem (referenced from \cite{OMS})  to solve the LDS in \(O(n\log n)\) time. The sub-problems are decreasing subsequence of varying lengths starting from \(1\). We build longer subsequence based on the end element of the current subsequences. For subsequences of the same lengths, we store the end element that is known to be the largest at the current point of time. This ensures that we could build the subsequence the longest possible. The LDS is the longest subsequence found at the end.\\
 \textbf{Relation between sub-problems:} \\
-Suppose \(dp[1..n]\) is an array that we use to store the end elements of LDS, where \(dp[i]\) stores the end element of LDS of length \(i\). Now if \(P_j = \langle(r_1,h_1), (r_2, h_2), \hdots, (r_j, h_j)\rangle\) is a prefix of the sorted input list, with which we have used to build subsequence of different lengths so far, and if \(dp[1..k]\) where \(k < n\) is the prefix of the array that has been filled (meaning that we have found subsequence of length from \(1\) to \(k\)). Then for the next element \((r_{j+1}, h_{j+1})\) that we want to build LDS with:
+Suppose \(dp[1..n]\) is an array that we use to store the end elements of LDS, where \(dp[i]\) stores the end element of LDS of length \(i\). Now if \(P_j = \langle(r_1,h_1), (r_2, h_2), \hdots, (r_j, h_j)\rangle\) is a prefix of the sorted input list, with which we have used to build subsequence of different lengths so far, and if \(dp[1..k]\) where \(k < n\) is the prefix of the array that has been filled (meaning that we have found subsequence of length from \(1\) to \(k\)). Then for the next element \((r_{j+1}, h_{j+1})\), we want to build subsequences in the following ways:
 \begin{itemize}
      \setlength \itemsep{0em} 
-     \item Update the end element of LDS of length \(m\) where \(m \leq k\) to be the largest so far:
+     \item Update the end element of subsequences of length \(m\) where \(m \leq k\) to be the largest so far:
      \begin{align*}
           dp[m] = (r_{j+1}, h_{j+1}) \hspace{0.5cm} 
           \text{ if } &h_{j+1} > dp[m].h\\ 
           &\land\ \forall l\in [1,m-1].\ dp[l].h > h_{j+1}
      \end{align*}
-     \item Build a longer LDS if it can be appended to the current longest subsequence
+     \item Build a longer subsequence if it can be appended to the current longest subsequence
      \begin{equation*}
           dp[k+1] = (r_{j+1}, h_{j+1}) \hspace{0.5cm} \text{ if } \forall l\in[1,k].\ dp[l].h > h_{j+1}
      \end{equation*}
 \end{itemize}
  
-\paragraph{(b)} Let \(P\) denote the input list \([(r_1,h_1), (r_2,h_2), \hdots, (r_n,h_n)]\). \(P_{sorted}\) denotes the input list after sorting. In the following psuedocode, we access the \(i^{th}\) element in \(P_{sorted}\) by \(P_{sorted}[i]\), and access \(r_i\) by \(P_{sorted}[i].r\) and  \(h_i\) by \(P_{sorted}[i].h\). Also, \(prev[1..n]\) is an array where \(prev[i]\) is the index of the predecessor of \(P_{sorted}[i]\) in a decreasing subsequence. \(dp[1..n]\) is an array where \(dp[i]\) is the end element of a subsequence of length \(i\). \(idx[1..n]\) is an array where \(idx[i]\) is the index of the element \(dp[i]\).
+\paragraph{(b)} Let \(P\) denote the input list \([(r_1,h_1), (r_2,h_2), \hdots, (r_n,h_n)]\). \(P_{sorted}\) denotes the input list after sorting. In the following psuedocode, we access the \(i^{th}\) element in \(P_{sorted}\) by \(P_{sorted}[i]\), and access \(r_i\) by \(P_{sorted}[i].r\) and  \(h_i\) by \(P_{sorted}[i].h\). Also, \(prev[1..n]\) is an array where \(prev[i]\) is the index of the predecessor of \(P_{sorted}[i]\) in a decreasing subsequence. \(dp[1..n]\) is an array where \(dp[i]\) is the current largest end element of a subsequence of length \(i\). \(idx[1..n]\) is an array where \(idx[i]\) is the index of the element \(dp[i]\) in \(P_{sorted}\).
 \begin{algorithm}[H]
      \caption{Bottom-up Longest Strictly Decreasing Sequence(\(P\))}
      \begin{algorithmic}[1]
@@ -178,11 +178,11 @@ Suppose \(dp[1..n]\) is an array that we use to store the end elements of LDS, w
                \State \(length = length + 1\)
           \Else
                \State \(k =\) \textbf{BinarySearch} (\(dp, P_{sorted}[i], 1, length\)) \\
-               \Comment{return the index of largest element \(\leq P_{sorted}[i].h\) in \(dp[1..length]\)}
-               \If {\(dp[k].h < P_{sorted}[i].h\)}
-                    \State \(dp[k] = P_{sorted}[i]\) \Comment{update the largest end element}
+               \Comment{return the index of largest element \(\leq P_{sorted}[i]\) in \(dp[1..length]\)}
+               \If {\(dp[k].h < P_{sorted}[i].h\)} \Comment{no need to update when elements are the same}
+                    \State \(dp[k] = P_{sorted}[i]\) \Comment{update the largest end element of subsequence of length \(k\)}
                     \State \(idx[k] = i\)
-                    \If {\(k > 1\)} \Comment{first element in a subsequence has no predecessor}
+                    \If {\(k > 1\)} \Comment{subsequence of length \(1\) has no predecessor}
                          \State \(prev[i] = idx[k-1]\)
                     \EndIf
                \EndIf
@@ -255,10 +255,10 @@ Suppose \(dp[1..n]\) is an array that we use to store the end elements of LDS, w
 \end{algorithm}
 
 
-\paragraph{(c).} Time complexity is \(O(n\log n)\). Initialization of arrays takes \(O(n)\) time. Performing mergesort on the input list takes \(O(n\log n)\) time. Then line \(10\text{-}23\) builds the subsequences by iterating through the sorted input list. For each iteration, we either append the element to the current LDS, or perform a binary search to find the position in the \(dp\) array to update the end element. Binary search takes \(O(\log n)\) since subsequences will at most be length \(n\), and in fact it is always smaller than \(n\) if we update the end element of established subsequences. We can perform binary search at most \(n\) times, so the cost for building LDS is \(O(n\log n)\). In fact if we update end element \(n\) times, we can never build longer subsequences than length \(1\). So the cost will definitely be \(O(n\log n)\). Then to restore the LDS from backwards, we iterate at most \(n\) times because its length is at most \(n\). The overall time complexity would be \(O(n)\) + \(O(n\log n)\) + \(O(n\log n)\) + \(O(n)\) = \(O(n\log n)\).
+\paragraph{(c).} Time complexity is \(O(n\log n)\). Initialization of arrays takes \(O(n)\) time. Performing mergesort on the input list takes \(O(n\log n)\) time. Then line \(10\text{-}23\) builds the subsequences by iterating through the sorted input list. For each iteration, we either append the element to the current LDS, or perform a binary search to find the position in the \(dp\) array to update the end element. Binary search takes \(O(\log n)\) since subsequences will at most be length \(n\), and in fact it is always smaller than \(n\) if we ever need to update the end element of established subsequences. We can perform binary search at most \(n\) times, so the cost for building LDS is \(O(n\log n)\). In fact if we update end element \(n\) times, we can never build longer subsequences than length \(1\). So the cost will definitely be \(O(n\log n)\). Then to restore the LDS from backwards, we iterate at most \(n\) times because its length is at most \(n\). The overall time complexity would be \(O(n)\) + \(O(n\log n)\) + \(O(n\log n)\) + \(O(n)\) = \(O(n\log n)\).
 
 \subsection*{Q6.}
-\paragraph{(a).} Given that \(k_i\) is the number of proposals for the \(i^{th}\) approach, and \(m_{ij}\) is the funding requested for the \(j^{th}\) proposal for the \(i^{th}\) approach, where \(j \in [1, k_i]\). The following algorithm relies heavily on the assumption that all \(m_{ij}\) are integer numbers, and assuming this is allowed in the problem specification. We would use a \(dp\) table to compute the choices of proposals. In the following psuedocode, entry \(dp[i][j]\) is a pair of values \(\langle x,y\rangle\) where \(x\) is a funding sum (potentially many possibilities) requested by the previous (\(i-1\)) approaches, given that \(j\) is the exact funding requested by all \(i\) approaches; and the second value \(y\) is the corresponding index of the proposal for the \(i^{th}\) approach such that \(x\) + \(m_{iy}\) = \(j\). If there is no set of proposals for the first \(i\) approaches that sum to \(j\) exactly, \(dp[i][j]\) would be \(\langle 0,0\rangle\). The reason for keeping the fund sum of the previous \((i-1)\) proposals is to trace the selected proposals backwards at the end.
+\paragraph{(a).} The following algorithm relies heavily on the assumption that all \(m_{ij}\) are integer numbers, and assuming this is allowed in the problem specification. Given that \(k_i\) is the number of proposals for the \(i^{th}\) approach, and \(m_{ij}\) is the funding requested for the \(j^{th}\) proposal for the \(i^{th}\) approach, where \(j \in [1, k_i]\). We would use a \(dp\) table to compute the choices of proposals. In the following psuedocode, entry \(dp[i][j]\) is a pair of values \(\langle x,y\rangle\) where \(x\) is a funding sum (potentially many possibilities) requested by the previous (\(i-1\)) approaches, given that \(j\) is the exact funding requested by all \(i\) approaches; and the second value \(y\) is the corresponding index of the proposal for the \(i^{th}\) approach such that \(x\) + \(m_{iy}\) = \(j\). If there is no set of proposals for the first \(i\) approaches that sum to \(j\) exactly, \(dp[i][j]\) would be \(\langle 0,0\rangle\). The reason for keeping the fund sum of the previous \((i-1)\) proposals is to trace the selected proposals backwards at the end.
 \begin{algorithm}[H]
      \caption{Set of proposals (n, F, m)}
      \begin{algorithmic}[1]
