--- a/citation.bib
+++ b/citation.bib
@@ -1,7 +1,6 @@
-@misc{OMS,
+@article{OMS,
     author= {{GeeksforGeeks}},
     year  = {2021},
     title = {Longest Increasing Subsequence Size (N log N)},
-    note  = {\url{https://www.geeksforgeeks.org/longest-monotonically-increasing-subsequence-size-n-log-n/}, 
-             Last accessed on 2021-11-1},
+    note  = {\url{https://www.geeksforgeeks.org/longest-monotonically-increasing-subsequence-size-n-log-n/}, Last accessed on 2021-11-1}
 }
